--- a/composer.json
+++ b/composer.json
@@ -48,8 +48,8 @@
     "scripts": {
         "post-autoload-dump": "@php ./vendor/bin/testbench package:discover --ansi",
         "analyse": "vendor/bin/phpstan analyse",
-        "test": "vendor/bin/pest",
-        "test-coverage": "vendor/bin/pest --coverage",
+        "test": "vendor/bin/pest --colors=always --order-by=random",
+        "coverage": "vendor/bin/pest --coverage --colors=always --order-by=random",
         "format": "vendor/bin/pint"
     },
     "config": {
