--- a/composer.json
+++ b/composer.json
@@ -50,6 +50,7 @@
     "scripts": {
         "post-autoload-dump": "@php ./vendor/bin/testbench package:discover --ansi",
         "phpstan": "vendor/bin/phpstan analyse --configuration=phpstan.neon.dist",
+        "test": "@pest",
         "pest": "vendor/bin/pest --colors=always --order-by=random --configuration=phpunit.xml.dist",
         "pestp": "vendor/bin/pest --parallel --colors=always --order-by=random --configuration=phpunit.xml.dist",
         "pestc": "vendor/bin/pest --coverage --colors=always --order-by=random --configuration=phpunit.xml.dist",
